# nscan

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
data/: host_addr.txt  nscan.ini  subdomain.txt
src/: main.rs
src/scan/: mod.rs  unix.rs  win.rs
src/util/: db.rs  mod.rs  option.rs  sys.rs  validator.rs  win.rs
