[package]
name = "nscan"
version = "0.1.0"
authors = ["Forestruct <57355977+forestruct@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.3.0"
winping = "0.10.0"
pnet = "0.26.0"
pnet_datalink = "0.26.0"
oui = "0.7.0"
rayon = "1.3.1"
lazy_static = "1.4.0"
indicatif = "0.15.0"
log = "0.4.11"
env_logger = "0.7.1"
fastping-rs = "0.1.5"
local_ipaddress = "0.1.3"
clap = "2.33.3"