[package]
name = "nscan"
version = "0.2.0"
authors = ["toref-sh <toref.sh@gmail.com>"]
edition = "2018"
description = "Cross-platform Network Scan Tool for Security Testing, Network Management."
repository = "https://github.com/toref-sh/nscan"
readme = "README.md"
keywords = ["network","security","web","dns","scan"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33"
tokio = { version = "0.2", features = ["full"] }
regex = "1"
nerve_base = "0.2.0"
nerve = "0.2.0"
pnet_datalink = "0.27"
ipnet = "2.3.0"
log = "0.4"
env_logger = "0.7"
oui = "0.7"
