[package]
name = "nscan"
version = "0.2.0"
authors = ["toref-sh <toref.sh@gmail.com>"]
edition = "2018"
description = "Cross-platform Network Scan Tool for Security Testing, Network Management."
repository = "https://github.com/toref-sh/nscan"
readme = "README.md"
keywords = ["network","security","web","dns","scan"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33"
tokio = { version = "0.2", features = ["full"] }
regex = "1"
nerve_base = "0.2.1"
nerve = "0.2.1"
pnet = "0.27"
ipnet = "2.3.0"
log = "0.4"
chrono = "0.4"
#oui = "0.8"
crossterm = "0.19"
reqwest = { version = "0.10"}
sudo = "0.6"
dns-lookup = "1.0"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]

[target.'cfg(target_os = "windows")'.dependencies]
[dependencies.winapi]
version = "0.3.9"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]
